# ruuvi-reader-rs

./: AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
src/: ble_provider.rs  lib.rs  main.rs  mock_provider.rs  provider.rs  scanner.rs
