[package]
name = "ruuvi-reader-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.11.0"
tokio = {version = "*", features = ["macros", "rt-multi-thread"]}
futures = "*"
ruuvi-sensor-protocol = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
