[package]
name = "ruuvi-reader-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.11"
tokio = {version = "1.42", features = ["macros", "rt-multi-thread"]}
futures = "0.3"
ruuvi-sensor-protocol = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
